# fgs_image_proc

./: README.md
fgs_image_filter/: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
fgs_image_filter/config/: Bilateral.cfg  CannyEdge.cfg  Chain.cfg  FilterType.cfg  GammaCorrection.cfg  Gaussian.cfg
fgs_image_filter/include/fgs_image_filter/: chain.hpp  dynamic_changable_filter.hpp  factory.hpp  i_filter.hpp  nodelet.hpp  reconfiguable_filters.hpp
fgs_image_filter/launch/: as_node.launch  chain_filter.launch
fgs_image_filter/src/fgs_image_filter/: bilateral.cpp  canny_edge.cpp  chain.cpp  chain_node.cpp  dynamic_changable_filter.cpp  factory.cpp  gamma_correction.cpp  gaussian.cpp  nodelet.cpp  pass_through.cpp
fgs_image_proc_node/: CMakeLists.txt  README.md  package.xml
fgs_image_proc_node/include/fgs_image_proc_node/: subscriber.hpp
fgs_image_proc_node/launch/: filter_node.launch
fgs_image_proc_node/src/fgs_image_proc_node/: filter_node.cpp  simple_node.cpp  subscriber.cpp
fgs_image_proc_utils/: CMakeLists.txt  package.xml
fgs_image_proc_utils/include/fgs_image_proc_utils/: i_image_retriever.hpp  viewer.hpp
fgs_image_proc_utils/src/fgs_image_proc_utils/: viewer.cpp
