<?xml version="1.0"?>
<package>
  <name>fgs_image_filter</name>
  <version>0.0.0</version>
  <description>The fgs_image_filter package</description>

  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/fugashy</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fgs_image_proc_utils</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>fgs_image_proc_utils</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
