<?xml version="1.0"?>
<package>
  <name>fgs_image_proc_node</name>
  <version>0.0.0</version>
  <description>The fgs_image_proc_node package</description>

  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/fugashy</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>fgs_image_proc_utils</build_depend>
  <build_depend>fgs_image_filter</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>fgs_image_proc_utils</run_depend>
  <run_depend>fgs_image_filter</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
