<?xml version="1.0"?>
<package>
  <name>fgs_image_proc_utils</name>
  <version>0.0.0</version>
  <description>The fgs_image_proc_utils package</description>

  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
